Adding syllabus for 2025-1

--- a/000_references/marketing_research_and_analytics.bib
+++ b/000_references/marketing_research_and_analytics.bib
@@ -1,4 +1,80 @@
 
+@misc{mcadoo_how_2024,
+	title = {How to cite {ChatGPT}},
+	url = {https://apastyle.apa.org/blog/how-to-cite-chatgpt},
+	language = {en},
+	urldate = {2025-01-14},
+	journal = {APA Style Blog},
+	author = {McAdoo, Timothy},
+	month = feb,
+	year = {2024},
+}
+
+@misc{equipo_proyecto_ia-uniandes_lineamientos_2024,
+	title = {Lineamientos para el uso de inteligencia artificial generativa ({IAG}) en la {Universidad} de los {Andes}},
+	url = {https://secretariageneral.uniandes.edu.co/images/documents/lineamientos-uso-inteligencia-artificial-generativa-IAG-uniandes.pdf},
+	language = {es},
+	urldate = {2025-04-14},
+	author = {Equipo proyecto IA-Uniandes},
+	month = oct,
+	year = {2024},
+}
+
+@misc{abba_crows_2022,
+	title = {Crow's {Foot} {Notation} – {Relationship} {Symbols} {And} {How} to {Read} {Diagrams}},
+	url = {https://www.freecodecamp.org/news/crows-foot-notation-relationship-symbols-and-how-to-read-diagrams/},
+	language = {en},
+	urldate = {2024-08-01},
+	author = {Abba, Ihechikara Vincent},
+	month = jun,
+	year = {2022},
+}
+
+@book{mckinney_python_2022,
+	address = {Beijing},
+	edition = {Third edition},
+	title = {Python for data analysis: data wrangling with pandas, {NumPy}, and {Jupyter}},
+	isbn = {978-1-0981-0403-0},
+	shorttitle = {Python for data analysis},
+	url = {https://wesmckinney.com/book/},
+	publisher = {O'Reilly},
+	author = {McKinney, Wes},
+	year = {2022},
+	note = {OCLC: on1338676391},
+	keywords = {Data mining, Exploration de données (Informatique), Programming languages (Electronic computers), Python (Computer program language), Python (Langage de programmation)},
+	annote = {Preliminaries -- Python language basics IPython, and Jupyter notebooks -- Built-in data structures, functions, and files -- NumPy basics: arrays and vectorized computation -- Getting started with pandas -- Data loading, storage, and file formats -- Data cleaing and preparation -- Data wrangling: join, combine, reshape -- Plotting and visualization -- Data aggregation and group operations -- Time series -- Introduction to modeling libraries in Python -- Data analysis examples -- Advanced NumPy -- More on the IPython system},
+	annote = {Previous edition: 2017 Includes index},
+}
+
+@book{wickham_r_2023,
+	address = {Beijing ; Sebastopol, CA},
+	edition = {Second edition},
+	title = {R for data science: import, tidy, transform, visualize, and model data},
+	isbn = {978-1-4920-9740-2},
+	shorttitle = {R for data science},
+	url = {https://r4ds.hadley.nz/},
+	publisher = {O'Reilly},
+	author = {Wickham, Hadley and Çetinkaya-Rundel, Mine and Grolemund, Garrett},
+	year = {2023},
+	note = {OCLC: on1390607935},
+	keywords = {Statistics, Information visualization, Computer programs, R (Computer program language), Data mining, Big data, Electronic data processing, R (Langage de programmation), Exploration de données (Informatique), Données volumineuses, Logiciels, Visualisation de l'information},
+}
+
+@book{schwarz_python_2020,
+	address = {Cham},
+	title = {Python for {Marketing} {Research} and {Analytics}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {978-3-030-49719-4 978-3-030-49720-0},
+	url = {https://doi-org.ezproxy.umng.edu.co/10.1007/978-3-030-49720-0},
+	language = {en},
+	urldate = {2024-07-21},
+	publisher = {Springer International Publishing},
+	author = {Schwarz, Jason S. and Chapman, Chris and Feit, Elea McDonnell},
+	year = {2020},
+	doi = {10.1007/978-3-030-49720-0},
+	file = {Submitted Version:/home/luifrancgom/Zotero/storage/YQZ6Z3JX/Schwarz et al. - 2020 - Python for Marketing Research and Analytics.pdf:application/pdf},
+}
+
 @book{chapman_r_2019,
 	address = {Cham},
 	edition = {2nd ed. 2019},
@@ -12,31 +88,39 @@
 	keywords = {Statistics, Marketing, Statistics and Computing/Statistics Programs, Statistics for Business, Management, Economics, Finance, Insurance},
 }
 
-@book{greenacre_biplots_2010,
-	address = {Bilbao},
-	title = {Biplots in practice},
-	isbn = {978-84-923846-8-6},
-	url = {https://www.fbbva.es/microsite/multivariate-statistics/biplots.html},
-	language = {eng},
-	publisher = {Fundación BBVA},
-	author = {Greenacre, Michael J.},
-	year = {2010},
-	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\I5CJZALZ\\Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
+@misc{umng_reglamento_2021,
+	title = {Reglamento {General} {Estudiantil} de {Pregrado}: {Acuerdo} 02 de 2015 actualizado, conforme a los {Acuerdos} 01 de 2017, 05 de 2018 y 04 de 2020, que lo modifican parcialmente},
+	publisher = {Universidad Militar Nueva Granada},
+	author = {Umng},
+	month = aug,
+	year = {2021},
 }
 
-@book{deza_encyclopedia_2016,
-	address = {Berlin, Heidelberg},
-	title = {Encyclopedia of {Distances}},
-	copyright = {http://www.springer.com/tdm},
-	isbn = {978-3-662-52843-3 978-3-662-52844-0},
-	url = {http://link.springer.com/10.1007/978-3-662-52844-0},
+@techreport{iregui_guerrero_politica_2018,
+	title = {Política de formación para la investigación, la innovación y el emprendimiento},
+	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
+	urldate = {2024-06-18},
+	institution = {Universidad Militar Nueva Granada},
+	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
+	year = {2018},
+	doi = {10.18359/whitepaper.3750},
+	file = {Full Text:/home/luifrancgom/Zotero/storage/HQMJHVH6/Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
+}
+
+@article{stevens_theory_1946,
+	title = {On the {Theory} of {Scales} of {Measurement}},
+	volume = {103},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.103.2684.677},
+	doi = {10.1126/science.103.2684.677},
 	language = {en},
-	urldate = {2024-05-06},
-	publisher = {Springer Berlin Heidelberg},
-	author = {Deza, Michel Marie and Deza, Elena},
-	year = {2016},
-	doi = {10.1007/978-3-662-52844-0},
-	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\JJW8FH4S\\Deza and Deza - 2016 - Encyclopedia of Distances.pdf:application/pdf},
+	number = {2684},
+	urldate = {2024-05-08},
+	journal = {Science},
+	author = {Stevens, S. S.},
+	month = jun,
+	year = {1946},
+	pages = {677--680},
 }
 
 @book{kaufman_finding_1990,
@@ -56,90 +140,30 @@
 	doi = {10.1002/9780470316801},
 }
 
-@article{stevens_theory_1946,
-	title = {On the {Theory} of {Scales} of {Measurement}},
-	volume = {103},
-	issn = {0036-8075, 1095-9203},
-	url = {https://www.science.org/doi/10.1126/science.103.2684.677},
-	doi = {10.1126/science.103.2684.677},
-	language = {en},
-	number = {2684},
-	urldate = {2024-05-08},
-	journal = {Science},
-	author = {Stevens, S. S.},
-	month = jun,
-	year = {1946},
-	pages = {677--680},
-}
-
-@techreport{iregui_guerrero_politica_2018,
-	title = {Política de formación para la investigación, la innovación y el emprendimiento},
-	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
-	urldate = {2024-06-18},
-	institution = {Universidad Militar Nueva Granada},
-	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
-	year = {2018},
-	doi = {10.18359/whitepaper.3750},
-	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\HQMJHVH6\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
-}
-
-@misc{umng_reglamento_2021,
-	title = {Reglamento {General} {Estudiantil} de {Pregrado}: {Acuerdo} 02 de 2015 actualizado, conforme a los {Acuerdos} 01 de 2017, 05 de 2018 y 04 de 2020, que lo modifican parcialmente},
-	publisher = {Universidad Militar Nueva Granada},
-	author = {Umng},
-	month = aug,
-	year = {2021},
-}
-
-@book{schwarz_python_2020,
-	address = {Cham},
-	title = {Python for {Marketing} {Research} and {Analytics}},
+@book{deza_encyclopedia_2016,
+	address = {Berlin, Heidelberg},
+	title = {Encyclopedia of {Distances}},
 	copyright = {http://www.springer.com/tdm},
-	isbn = {978-3-030-49719-4 978-3-030-49720-0},
-	url = {https://doi-org.ezproxy.umng.edu.co/10.1007/978-3-030-49720-0},
+	isbn = {978-3-662-52843-3 978-3-662-52844-0},
+	url = {http://link.springer.com/10.1007/978-3-662-52844-0},
 	language = {en},
-	urldate = {2024-07-21},
-	publisher = {Springer International Publishing},
-	author = {Schwarz, Jason S. and Chapman, Chris and Feit, Elea McDonnell},
-	year = {2020},
-	doi = {10.1007/978-3-030-49720-0},
-	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\YQZ6Z3JX\\Schwarz et al. - 2020 - Python for Marketing Research and Analytics.pdf:application/pdf},
+	urldate = {2024-05-06},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Deza, Michel Marie and Deza, Elena},
+	year = {2016},
+	doi = {10.1007/978-3-662-52844-0},
+	file = {Submitted Version:/home/luifrancgom/Zotero/storage/JJW8FH4S/Deza and Deza - 2016 - Encyclopedia of Distances.pdf:application/pdf},
 }
 
-@book{wickham_r_2023,
-	address = {Beijing ; Sebastopol, CA},
-	edition = {Second edition},
-	title = {R for data science: import, tidy, transform, visualize, and model data},
-	isbn = {978-1-4920-9740-2},
-	shorttitle = {R for data science},
-	url = {https://r4ds.hadley.nz/},
-	publisher = {O'Reilly},
-	author = {Wickham, Hadley and Çetinkaya-Rundel, Mine and Grolemund, Garrett},
-	year = {2023},
-	note = {OCLC: on1390607935},
-	keywords = {Data mining, Information visualization, R (Computer program language), Statistics, Big data, Computer programs, Electronic data processing, Données volumineuses, Exploration de données (Informatique), Logiciels, R (Langage de programmation), Visualisation de l'information},
-}
-
-@book{mckinney_python_2022,
-	address = {Beijing},
-	edition = {Third edition},
-	title = {Python for data analysis: data wrangling with pandas, {NumPy}, and {Jupyter}},
-	isbn = {978-1-09-810403-0},
-	shorttitle = {Python for data analysis},
-	url = {https://wesmckinney.com/book/},
-	publisher = {O'Reilly},
-	author = {McKinney, Wes},
-	year = {2022},
-	note = {OCLC: on1338676391},
-	keywords = {Data mining, Exploration de données (Informatique), Programming languages (Electronic computers), Python (Computer program language), Python (Langage de programmation)},
-}
-
-@misc{abba_crows_2022,
-	title = {Crow's {Foot} {Notation} – {Relationship} {Symbols} {And} {How} to {Read} {Diagrams}},
-	url = {https://www.freecodecamp.org/news/crows-foot-notation-relationship-symbols-and-how-to-read-diagrams/},
-	language = {en},
-	urldate = {2024-08-01},
-	author = {Abba, Ihechikara Vincent},
-	month = jun,
-	year = {2022},
+@book{greenacre_biplots_2010,
+	address = {Bilbao},
+	title = {Biplots in practice},
+	isbn = {978-84-923846-8-6},
+	url = {https://www.fbbva.es/microsite/multivariate-statistics/biplots.html},
+	language = {eng},
+	publisher = {Fundación BBVA},
+	author = {Greenacre, Michael J.},
+	year = {2010},
+	annote = {Literaturverz. S. 199 - 203},
+	file = {Table of Contents PDF:/home/luifrancgom/Zotero/storage/I5CJZALZ/Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
 }
